tests/config/benchmark/manifests/krouter/gateway.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bench-gw-params
data:
  krouter.hcl: |
    version = 1

    service {
      type                    = "NodePort"
      external_traffic_policy = "Local"

      node_ports = {
        "http" = 30090
      }
    }
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bench-gw
spec:
  gatewayClassName: krouter
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: bench-gw-params
  listeners:
    - name: http
      port: 80
      protocol: HTTP
